fix: add exception handling, IPv6 localhost support, and input validation to servlets
- Add try-catch with proper error responses to EFormImageView, EFormSignature,
  FrmPDF, ContentRendering, EformView, and GenericDownload servlets
- Add IPv6 loopback (::1) support to localhost checks
- Add digitalSignatureId input validation in EFormSignatureViewForPdfGenerationServlet
- Combine develop's OscarDownload security (allowlist, directory validation) with
  filename sanitization and structured error handling
- Use parameterized logging to replace string concatenation in logger calls

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>